[project]
name = "svenskmud-bot"
version = "0.1.0"
description = "En bot för Svensk MUD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "langchain>=0.3.14",
    "langchain-openai>=0.2.14",
    "telnetlib3>=2.0.4",
    "websockets>=14.1",
    "openai>=1.31.0",
]
